* Fixed missing_const hack to be compatible with Rails. (Jamis Buck
  supplied test case).
* Made the RDoc task default to internal (in-process) RDoc formatting.
  The old behavior is still available by setting the +external+ flag
  to true.
* Rakefiles are now loaded with the expanded path to prevent
  accidental polution from the Ruby load path.

== Version 0.6.1

* Rebuilt 0.6.0 gem without signnig.

== Version 0.6.0

* Fixed file creation bug in the unit tests (caused infinite loop on
  windows).
* Fixed bug where session based functional tests were run under
  windows.
* Fixed bug in directory tasks so that updating a directory will not
  retrigger file tasks depending on the directory (see
  FileCreationTask and EarlyTime).
* Added egrep to FileList
* ruby command now runs same ruby version as rake.
* Added investigation to task object. (suggested by Martin Fowler)
* Added ruby_opts to the test task to allow arbitrary ruby options to
  be passed to the test script. (Greg Fast)
* Fixed the test loader to ignore options. (Greg Fast)
* Moved Task, FileTask, FileCreationTask and RakeApp into the Rake
  module namespace.  Old style namespace behavior can be invoked via
  the --classic-namespace option. (requested by Kelly Felkins).
* GemTask is now sensitive to the gem platform (Masao Mutoh).
* A non-existing file prerequisite will no longer cause an exception
  (Philipp Neubeck).
* Multiple prerequisites on Rake rules now allowed (initial patch
  supplied by Stuart Jansen).

== Version 0.5.4

* Added double quotes to the test runner.
* Added .svn to default ignore list.
* Updated FileList#include to support nested arrays and filelists.

== Version 0.5.3

* Added support for importing Rakefile and other dependencies.
* Fixed bug so that now rules can chain off of existing tasks as well
  as existing files.
* Fixed verbose flag bug in the testing task.  Shortened some failure
  messages.
* Make FileUtils methods private at the top level module to avoid