@@ -13,10 +13,33 @@ namespace "nest" do
   task :xx => :copy
 end
 
-namespace do
-  desc "anon copy"
+anon_ns = namespace do
+  desc "anonymous copy task"
   task :copy do
     puts "ANON COPY"
   end
-  task "rake:default" => "copy"
 end
+
+desc "Top level task to run the anonymous version of copy"
+task :anon => anon_ns[:copy]
+
+namespace "very" do
+  namespace "nested" do
+    task "run" => "rake:copy"
+  end
+end
+
+namespace "a" do
+  desc "Run task in the 'a' namespace"
+  task "run" do
+    puts "IN A"
+  end
+end
+
+namespace "b" do
+  desc "Run task in the 'b' namespace"
+  task "run" => "a:run" do
+    puts "IN B"
+  end
+end
+
